syntax = "proto3";

package subnetlookup;

option go_package = "github.com/luxdefi/luxd/proto/pb/subnetlookup";

service SubnetLookup {
  rpc SubnetID(SubnetIDRequest) returns (SubnetIDResponse);
}

message SubnetIDRequest {
  bytes chain_id = 1;
}

message SubnetIDResponse {
  bytes id = 1;
}
